--- a/checkpoint5.ipynb
+++ b/checkpoint5.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "metadata": {
     "scrolled": true
    },
@@ -88,7 +88,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5]\n"
+      "[3, 5]\n"
      ]
     }
    ],
@@ -96,12 +96,14 @@
     "import numpy as np\n",
     "a= np.array([[1,2],[3,5]])\n",
     "list=[]\n",
-    "x=3\n",
+    "x=2\n",
     "if x<a[0][0]:\n",
     "    list.append(a[0][0])\n",
-    "elif x<a[0][1]:\n",
+    "if x<a[0][1]:\n",
     "    list.append(a[0][1])\n",
-    "elif x<a[1][1]:\n",
+    "if x<a[1][0]:\n",
+    "    list.append(a[1][0])\n",
+    "if x<a[1][1]:\n",
     "    list.append(a[1][1])\n",
     "print(list)\n"
    ]
